Fixed: '2.     Left sidebar navigation/Menu List a.     You are correct that 13px is too small, for the page indicator. This should be Arial 15px bold. Museo was quite a bit larger than Arial.'

--- a/css/altres.css
+++ b/css/altres.css
@@ -835,7 +835,7 @@ body.front #main {
 
 #main h2#page-identifier {
 	color: #000000;
-	font-size: 13px;
+	font-size: 15px;
 	margin-left: -225px;
 	margin-bottom: 16px;
 	float: left;
